[fix] Tried to fix the title spacing on mobile ; only works with Settings view for now

--- a/src/styles/topbar.styl
+++ b/src/styles/topbar.styl
@@ -22,3 +22,6 @@ $coz-bar-size = 40px
         > h2
             font-size 1.3em
             margin    0
+
+    .fil-topbar.mobile
+        left 1em
